src/scss/pages/home.scss
.hero {
  position: relative;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;

  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
    z-index: 1;
  }

  &__video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: top center;
  }

  &__logo {
    position: relative;
    width: 50vw;
    height: auto;
    z-index: 2;
  }
}

.intro {
  &__block {
    padding-top: rem(30);

    @include tablet {
      padding-top: rem(150);
    }
  }

  &__scrolling {
    @include active {
      .intro__image {
        animation: wave 12s linear infinite;
      } 
    }
  }

  &__items {
    display: flex;
    justify-content: center;
    gap: rem(25);
    margin-top: rem(25);

    @include tablet {
      gap: rem(51);
    }
  }

  &__item {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;

    @include tablet {
      flex-direction: row;
    }
  }

  &__icon {
    width: 50px;
    height: 50px;

    @include tablet {
      width: 70px;
      height: 70px;
    }
  }

  &__texts {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    color: $color-white;

    @include tablet {
      align-items: flex-start;
      text-align: left;
    }
  }

  &__strong {
    font-family: var(--secondary-font);
    font-size: rem(16);
    line-height: 110%;

    &:not(:last-child) {
      margin-bottom: 5px;
    }

    @include tablet {
      font-size: rem(36);
    }
  }

  &__desc {
    font-size: rem(14);
    line-height: 110%;

    @include tablet {
      font-size: rem(16);
    }
  }

  &__buttons {
    margin-top: rem(50);
    display: flex;
    flex-direction: column;
    align-items: center;

    @include tablet {
      margin-top: rem(100);
    }
  }

  &__button {
    width: 100%;

    @include tablet {
      padding-left: rem(108);
      padding-right: rem(108);
      width: auto;
    }
  }
}

.page__col {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: rem(30);

  @include desktop {
    flex-direction: row;
    gap: rem(70);
  }

  &:not(:last-child) {
    margin-bottom: rem(50);

    @include tablet {
      margin-bottom: rem(100);
    }

    @include desktop {
      margin-bottom: rem(150);
    }
  }

  &--reverse {
    @include desktop {
      flex-direction: row-reverse;
    }
  }


  &-image {
    @include desktop {
      max-width: 50%;
    }

    @include mobile {
      margin-left: rem(-40);
      margin-right: rem(-40);
      width: calc(100% + 40px);
      max-width: unset;
      height: auto;
    }
  }

  &-title {
    margin: 0;
    font-weight: 300;
    font-size: rem(24);
    line-height: 150%;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: $color-white;

    &:not(:last-child) {
      margin-bottom: rem(20);
    }

    @include tablet {
      font-size: rem(32);
    }

    @include desktop {
      &:not(:last-child) {
        margin-bottom: rem(30);
      }
    }
  }

  &-subtitle {
    margin: 0;
    font-weight: 300;
    font-size: rem(18);
    line-height: 150%;
    letter-spacing: 0.03em;
    color: $color-white;

    &:not(:last-child) {
      margin-bottom: 1rem;
    }

    @include tablet {
      font-size: rem(24);
    }

    @include desktop {
      font-size: rem(28);
    }
  }
}

.rotate {
  &__box {
    display: flex;
    align-items: center;
    flex-direction: column;
  }
  &__images {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 50%;
    img {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }

  &__slider  {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 1px;

    @include desktop {
      width: 961px;
    }
  }

  &__buttons {
    margin-top: rem(50);
    display: flex;
    justify-content: center;

    @include tablet {
      margin-top: rem(100);
    }
  }

  &__button {
    width: 100%;
    @include tablet {
      width: auto;
      padding-left: rem(151);
      padding-right: rem(151);
    }
  }
}

.electric {
  &__block {
    margin-top: rem(70);
    display: flex;
    flex-direction: column;

    @include tablet {
      align-items: center;
    }

    @include desktop {
      margin-top: rem(100);
    }
  }

  &__image {
    margin-bottom: rem(70);

    @include desktop {
      margin-top: rem(100);
    }
  }

  &__texts {
    @include tablet {
      max-width: 80%;
    }

    @include desktop {
      max-width: 60%;
    }
  }

  &__text {
    text-align: center;

    &:not(:last-child) {
      margin-bottom: rem(50);
    }
  }

  &__title {
    margin: 0;
    font-weight: 300;
    font-size: rem(24);
    line-height: 150%;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: $color-white;
    text-align: center;

    &:not(:last-child) {
      margin-bottom: rem(10);
    }

    @include tablet {
      font-size: rem(32);
    }
  }

  &__subtitle {
    margin: 0;
    font-weight: 300;
    font-size: rem(18);
    line-height: 130%;
    color: $color-white;

    &:not(:last-child) {
      margin-bottom: 1rem;
    }

    @include tablet {
      font-size: rem(24);
    }
  }

  &__details {
    margin-top: rem(200);

    @include tablet {
      margin-top: rem(250);
    }
  }
}
/* ... */

